--- a/frontend/index.html
+++ b/frontend/index.html
@@ -121,7 +121,7 @@
             <div class="profile-contact">
                 <div class="contact-info">
                     <div class="contact-label">Разработчик</div>
-                    <div class="contact-name">vahagn & co</div>
+                    <div class="contact-name">aregak inc.</div>
                 </div>
                 <a href="https://t.me/Mr_Aregak" target="_blank" class="contact-link">
                             <svg viewBox="0 0 24 24"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg>
@@ -131,7 +131,7 @@
                 </div>
         
         <div class="profile-version">
-            AR Gesture Shooter v1.0 • © 2025-2026 vahagn & co
+            SkyGun Shooter v1.0 • © 2025-2026 aregak inc.
                     </div>
                 </div>
     
@@ -214,7 +214,17 @@
     <nav class="bottom-nav" id="bottom-nav">
         <button class="nav-item" data-screen="weapons">
             <span class="nav-icon">
-                <img src="img/pric.png" alt="Оружие">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="1.5">
+                    <!-- Внешний круг -->
+                    <circle cx="12" cy="12" r="8"/>
+                    <!-- Центральная точка -->
+                    <circle cx="12" cy="12" r="1.5" fill="currentColor" stroke="none"/>
+                    <!-- Крестовина -->
+                    <line x1="12" y1="2" x2="12" y2="6"/>
+                    <line x1="12" y1="18" x2="12" y2="22"/>
+                    <line x1="2" y1="12" x2="6" y2="12"/>
+                    <line x1="18" y1="12" x2="22" y2="12"/>
+                </svg>
             </span>
         </button>
         <button class="nav-item active" data-screen="hub">
